--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ html {
     scroll-behavior: smooth;
 }
 
+/* header section */
+
 header {
     position: fixed;
     top: 0;
@@ -33,6 +35,8 @@ header {
 a {
     text-decoration: none;
 }
+
+
 
 header .logo a img {
     width: 150px;
@@ -81,6 +85,8 @@ header .toggle-btn ion-icon {
     font-size: 28px;
 }
 
+/* MAX WIDTH 950PX FOR HEADER */
+
 @media (max-width:950px){
     header {
         justify-content: space-between;
@@ -117,6 +123,8 @@ header .toggle-btn ion-icon {
     }
 }
 
+/* MAX WIDTH 500PX FOR HEADER */
+
 @media (max-width:500px) {
     header {
         padding: 8px 16px;
@@ -127,6 +135,9 @@ header .toggle-btn ion-icon {
     }
 }
 
+/* MAX HEIGHT 500PX FOR HEADER */
+
+
 @media (max-height:500px) {
     header {
         padding: 8px 16px;
@@ -136,6 +147,8 @@ header .toggle-btn ion-icon {
         height: 50px;
     }
 }
+
+/* CHAT MENU */
 
 .menu-container {
     position: fixed;
@@ -248,7 +261,9 @@ header .toggle-btn ion-icon {
     border-radius: 50%;
     padding: 8px;
     transform: rotate(calc(360deg / -3 * var(--i)));
-}
+} 
+
+/* MAX WIDTH 600PX FOR CHAT MENU */
 
 @media (max-width:600px){
     .menu-container {
@@ -257,6 +272,8 @@ header .toggle-btn ion-icon {
     }
 }
 
+/* MAX HEIGHT 600PX FOR CHAT MENU */
+
 @media (max-height:600px){
     .menu-container {
         bottom: 0px;
@@ -264,10 +281,14 @@ header .toggle-btn ion-icon {
     }
 }
 
+/* MAIN */
+
 main {
     width: 100vw;
     min-height: 100vh;
 }
+
+/* HERO SECTION */
 
 main section.hero {
     padding: 96px 256px;
@@ -302,6 +323,8 @@ main section.hero .hero-container .body-text {
     font-size: 21px;
 }
 
+/* MAX WIDTH 1400PX FOR HERO SECTION */
+
 @media (max-width:1400px){
     main section.hero {
         padding: 64px;
@@ -309,17 +332,23 @@ main section.hero .hero-container .body-text {
     }    
 }
 
+/* MAX WIDTH 1100PX FOR HERO SECTION */
+
 @media (max-width:1100px){
     main section.hero {
         background-position: 150% top;
     }
 }
 
+/* MAX WIDTH 950PX FOR HERO SECTION */
+
 @media (max-width:950px){
     main section.hero {
         background-position: 200% top;
     }
 }
+
+/* MAX WIDTH 900PX FOR HERO SECTION */
 
 @media (max-width:900px){
     main section.hero {
@@ -342,6 +371,8 @@ main section.hero .hero-container .body-text {
     }
 }
 
+/* MAX WIDTH 500PX FOR HERO SECTION */
+
 @media (max-width:500px){
     main section.hero .hero-container .headline {
         font-size: 32px;
@@ -356,13 +387,15 @@ main section.hero .hero-container .body-text {
     }
 }
 
+/* MAX HEIGHT 500PX FOR HERO SECTION */
+
 @media (max-height:500px){
     main section.hero {
         padding: 96px 48px;
     }
 }
 
-
+/* ABOUT US SECTION */
 
 main section.about-us {
     width: 100vw;
@@ -446,6 +479,8 @@ main section.about-us .highlights-container .key-highlights ul li {
 main section.about-us .highlights-container .key-highlights ul li .heading .toggle-btn {
     display: none;
 }
+
+/* MAX WIDTH 1400PX FOR ABOUT US SECTION */
 
 @media (max-width:1400px){
     main section.about-us .highlights-container {
@@ -547,6 +582,8 @@ main section.about-us .highlights-container .key-highlights ul li .heading .togg
     }
 }
 
+/* MAX WIDTH 1200PX FOR ABOUT US SECTION */
+
 @media (max-width:1200px){
     main section.about-us .highlights-container {
         flex-direction: column;
@@ -564,6 +601,8 @@ main section.about-us .highlights-container .key-highlights ul li .heading .togg
         width: 100%;
     }
 }
+
+/* MAX WIDTH 500PX FOR ABOUT US SECTION */
 
 @media (max-width:500px){
     main section.about-us {
@@ -593,7 +632,7 @@ main section.about-us .highlights-container .key-highlights ul li .heading .togg
     }
 }
 
-
+/* SERVICES SECTION */
 
 main section.services {
     width: 100vw;
@@ -659,6 +698,8 @@ main section.services .key-highlights .highlight .text p {
     color: #111;
 }
 
+/* MAX WIDTH 650PX FOR SERVICES SECTION */
+
 @media (max-width:650px){
     main section.services {
         font-size: 18px;
@@ -674,6 +715,8 @@ main section.services .key-highlights .highlight .text p {
     }
 }
 
+/* MAX WIDTH 500PX FOR SERVICES SECTION */
+
 @media (max-width:500px) {
     main section.services .key-highlights .highlight {
         width: 90vw;
@@ -683,7 +726,7 @@ main section.services .key-highlights .highlight .text p {
 
 
 
-
+/* PORTFOLIO SECTION */
 
 main section.portfolio {
     width: 100vw;
@@ -744,6 +787,8 @@ main section.portfolio .cta:hover {
     transform: scale(1.1);
 }
 
+/* MAX WIDTH 560PX FOR PORTFOLIO SECTION */
+
 @media (max-width:560px){
     main section.portfolio {
         padding: 48px 0;
@@ -756,7 +801,7 @@ main section.portfolio .cta:hover {
     }
 }
 
-
+/* TESTIMONIALS SECTION */
 
 main section.testimonials {
     width: 100vw;
@@ -876,6 +921,8 @@ main section.testimonials .testimonials-container .cards .card .info-block .info
     color: #777;
 }
 
+/* MAX WIDTH 550PX FOR TESTIMONIALS */
+
 @media (max-width:550px){
     main section.testimonials {
         font-size: 18px;
@@ -895,6 +942,8 @@ main section.testimonials .testimonials-container .cards .card .info-block .info
 
 
 }
+
+/* CONTACT US SECTION */
 
 main section.contact-us {
     padding: 96px 0;
